Updated and fixed tests failing after update. Variable class changed to only allow variable names and prevent NullPointerExceptions